tests/bad/entry_name.lens
process(entry) when  (e.foo){
    print(e.foo)
}

